apps/workloads/pterodactyl/panel/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pterodactyl
  labels:
    app: pterodactyl
