apps/workloads/pterodactyl/panel/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl
  namespace: pterodactyl
spec:
  selector:
    matchLabels:
      app: pterodactyl
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pterodactyl
    spec:
      containers:
      - name: panel
        image: ghcr.io/pterodactyl/panel:v1.11.5
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits: 
            memory: "256Mi"
            cpu: "500m" 
        ports: 
          - containerPort: 80
        volumeMounts:
        - mountPath: /app/var/
          name: pterodactyl-app-content
        - mountPath: /etc/nginx/http.d/
          name: pterodactyl-nginx-content
        - mountPath: /app/storage/logs
          name: pterodactyl-logs-content
      volumes:
      - name: pterodactyl-app-content
        persistentVolumeClaim:
          claimName:  pterodactyl-panel-app-claim
      - name: pterodactyl-nginx-content
        persistentVolumeClaim:
          claimName:  pterodactyl-panel-nginx-claim
      - name: pterodactyl-logs-content
        persistentVolumeClaim:
          claimName:  pterodactyl-panel-logs-claim

---
#caching server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caching
  namespace: pterodactyl
spec:
  selector:
    matchLabels:
      app: caching
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: caching
    spec:
      containers:
      - name: redis
        image: redis:alpine
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits: 
            memory: "256Mi"
            cpu: "500m" 
        ports: 
          - containerPort: 6379
        restart: always

---
#Database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: pterodactyl
spec:
  selector:
    matchLabels:
      app: mariadb
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.5
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits: 
            memory: "256Mi"
            cpu: "500m" 
        ports: 
          - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/MARIADB
          name: pterodactyl-db
      volumes:
      - name: pterodactyl-db
        persistentVolumeClaim:
          claimName:  pterodactyl-db-claim
