apps/workloads/pterodactyl/panel/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: panel
  namespace: pterodactyl
spec:
  selector:
    app: pterodactyl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: caching
  namespace: pterodactyl
spec:
  selector:
    app: caching
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: pterodactyl
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
